--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,14 @@
 
 # Gemini API Key used by Vite to inject into client code
 GEMINI_API_KEY=YOUR_GEMINI_API_KEY_HERE
+
+# Autopilot default toggle (fallback only). The real state is persisted in KV.
+# Accepts "true" or "false". If missing, defaults to ON (true).
+AUTOPILOT_ENABLED=true
+
+# Vercel KV (REST) configuration
+# NOTE: Se usa REST KV; los valores son inyectados por Vercel Storage al conectar la base con el proyecto.
+# Normalmente no necesitas definirlos manualmente si ya conectaste la base desde Storage → Connect Project.
+# Si fuera necesario, puedes copiarlos desde la sección de REST API en la base y pegarlos aquí.
+KV_REST_API_URL=
+KV_REST_API_TOKEN=
