feat(api): add nested /api/kv-health/index.ts serverless function; register in vercel.json for reliable route detection

--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,9 @@
     },
     "api/kvHealth.ts": {
       "runtime": "@vercel/node"
+    },
+    "api/kv-health/index.ts": {
+      "runtime": "@vercel/node"
     }
   },
   "rewrites": [
