test(api): add simple /api/kv function to verify Vercel function detection beyond autopilot

--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,9 @@
     },
     "api/kv-health/index.ts": {
       "runtime": "@vercel/node"
+    },
+    "api/kv.ts": {
+      "runtime": "@vercel/node"
     }
   },
   "rewrites": [
