--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "@google/genai": "^1.28.0"
+    "@google/genai": "^1.28.0",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
