docs(env): añadir ejemplos y explicación para REDIS_URL/KV_REDIS_URL/VERCEL_REDIS_URL

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,13 @@ AUTOPILOT_ENABLED=true
 # Si fuera necesario, puedes copiarlos desde la sección de REST API en la base y pegarlos aquí.
 KV_REST_API_URL=
 KV_REST_API_TOKEN=
+
+# Redis connection (opcional)
+# Nuestro código toma la primera disponible entre:
+#   REDIS_URL || KV_REDIS_URL || VERCEL_REDIS_URL
+# Si ya conectaste Redis desde Vercel Storage, KV_REDIS_URL suele estar presente automáticamente.
+# No pegues secretos reales en este archivo; úsalos sólo en .env.local.
+# Ejemplos:
+# KV_REDIS_URL=redis://default:<password>@<host>:<port>
+# REDIS_URL=rediss://default:<password>@<host>:<tls_port>
+# VERCEL_REDIS_URL=redis://default:<password>@<host>:<port>
