--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@
 # Gemini API Key used by Vite to inject into client code
 GEMINI_API_KEY=YOUR_GEMINI_API_KEY_HERE
 
+# Optional backend for Veo generation (client will POST to `${VITE_VEO_BACKEND_URL}/generate-veo`)
+# Defaults to https://veo-backend.onrender.com if not set
+VITE_VEO_BACKEND_URL=
+
 # Autopilot default toggle (fallback only). The real state is persisted in KV.
 # Accepts "true" or "false". If missing, defaults to ON (true).
 AUTOPILOT_ENABLED=true
