feat(auth+kv): GIS OAuth real en ApiKeyManager, guardado opcional de API key en KV/Redis (/api/userKey), README actualizado con OAuth y backend x-gemini-api-key; dev: arranque autopilotServer para proxy /api/autopilot

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,11 @@ GEMINI_API_KEY=YOUR_GEMINI_API_KEY_HERE
 # Defaults to https://veo-backend.onrender.com if not set
 VITE_VEO_BACKEND_URL=
 
+# Google OAuth Client ID (opcional)
+# Necesario para usar Google Identity Services en el frontend.
+# Ejemplo: 1234567890-abcdefg.apps.googleusercontent.com
+VITE_GOOGLE_OAUTH_CLIENT_ID=
+
 # Autopilot default toggle (fallback only). The real state is persisted in KV.
 # Accepts "true" or "false". If missing, defaults to ON (true).
 AUTOPILOT_ENABLED=true
