chore(env): apply Google OAuth Client ID across all environments via vercel.json; update .env.example and .env.local with server-side GOOGLE_OAUTH_CLIENT_ID

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,12 @@ VITE_VEO_BACKEND_URL=
 # Ejemplo: 1234567890-abcdefg.apps.googleusercontent.com
 VITE_GOOGLE_OAUTH_CLIENT_ID=
 
+# Google OAuth Client ID (server-side, opcional)
+# Si quieres validación estricta de 'aud' en el backend (/api/verify-google-id),
+# define también GOOGLE_OAUTH_CLIENT_ID con el mismo valor.
+# No es secreto y puede ser igual al VITE_GOOGLE_OAUTH_CLIENT_ID.
+GOOGLE_OAUTH_CLIENT_ID=
+
 # Autopilot default toggle (fallback only). The real state is persisted in KV.
 # Accepts "true" or "false". If missing, defaults to ON (true).
 AUTOPILOT_ENABLED=true
